Fixed scaling bug for fluids on screen edge

--- a/app/src/main/res/layout/oreview_layout.xml
+++ b/app/src/main/res/layout/oreview_layout.xml
@@ -5,9 +5,15 @@
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:text="TextView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ores" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/oreview_linear_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
