--- a/app/src/main/res/layout/shop_details.xml
+++ b/app/src/main/res/layout/shop_details.xml
@@ -36,4 +36,16 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/shopdetails_cost_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
