--- a/app/src/main/res/layout/shop_details.xml
+++ b/app/src/main/res/layout/shop_details.xml
@@ -36,6 +36,12 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
+    <Button
+        android:text="Buy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/purchase_item" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
