Added 8 achievements and google play signin. Changed the app package name.

--- a/app/src/main/res/layout/gameview_content.xml
+++ b/app/src/main/res/layout/gameview_content.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.thomas.miner.GameView
+    <com.alienpg.release.aflatminer.GameView
         android:id="@+id/gameviewsurface"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
